--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,6 +10,15 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <filter>
+  	<filter-name>openSessionInView</filter-name>
+  	<filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>openSessionInView</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <filter>
   	<filter-name>struts2</filter-name>
   	<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
   </filter>
@@ -17,24 +26,14 @@
   	<filter-name>struts2</filter-name>
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
-  <servlet>
-    <description></description>
-    <display-name>ajaxServlet</display-name>
-    <servlet-name>ajaxServlet</servlet-name>
-    <servlet-class>cn.zhku.jsjs.haofeng.action.ajaxServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ajaxServlet</servlet-name>
-    <url-pattern>/ajaxServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>ajaxServletHibernateTest</display-name>
-    <servlet-name>ajaxServletHibernateTest</servlet-name>
-    <servlet-class>cn.zhku.jsjs.haofeng.action.ajaxServletHibernateTest</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ajaxServletHibernateTest</servlet-name>
-    <url-pattern>/ajaxServletHibernateTest</url-pattern>
-  </servlet-mapping>
+
+
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:applicationContext.xml</param-value>
+	</context-param>
+
 </web-app>
